[package]
name = "rs-xabc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
scroll = { version = "0.12.0", features = ["derive"] }
getset = "0.1.2"
scroll_derive = "0.12.0"
binrw = "0.14.0"
anyhow = "1.0.86"
cesu8 = "1.1.0"
lru = "0.12.4"
log = "0.4.22"
memmap2 = "0.9.5"
num-traits = "0.2.19"
num-derive = "0.4.2"
bitflags = "2.6.0"
adler32 = "1.2.0"

[dev-dependencies]
env_logger = "0.11.5"
tempfile = "3.12.0"
