[workspace]
members = ["crates/parser", "hello"]

[workspace.package]
name = "xabc"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
rs-xabc = { version = "0.1.0", path = "crates/rs-xabc", default-features = false }
# tracing = "0.1.40"
# tracing-subscriber = { version = "0.3.18", optional = true }                       # "0.3.18"

# [dev-dependencies]
# tempfile = "3.12.0"
#
# [profile.dev]
# debug = true

# 发布时，不打包调试代码
# [profile.release]
# debug = false
