[package]
name = "xabc-lib"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "一个解析 abc 文件的库"
keywords = ["harmony", "abc", "parser"]
readme = "README.md"

[dependencies]
scroll = { version = "0.12.0", features = ["derive"] }
getset = "0.1.2"
memmap2 = "0.9.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", optional = true } # "0.3.18"
# scroll_derive = "0.12.0"
# anyhow = "1.0.86"
# cesu8 = "1.1.0"
# lru = "0.12.4"
# log = "0.4.22"
# num-traits = "0.2.19"
# num-derive = "0.4.2"
# bitflags = "2.6.0"
# adler32 = "1.2.0"

[dev-dependencies]
# env_logger = "0.11.5"
# tempfile = "3.12.0"

[features]
default = []
logging = ["tracing-subscriber"]

[profile.dev]
debug = true

# 发布时，不打包调试代码
[profile.release]
debug = false
